задание с поиском(изменения)